# omerta_protocol

./: .gitignore  README.md  pyproject.toml  requirements.txt
.githooks/: pre-commit  pre-push
.github/workflows/: notify-parent.yml  tests.yml
docs/protocol/: DESIGN_PHILOSOPHY.md  FORMAT.md  GENERATION.md  GOSSIP.md  SIMULATOR_DESIGN.md
papers/: README.md
papers/economic-analysis/: ECONOMIC_ANALYSIS.md
papers/mechanism-design/: participation-verification-defenses.md
papers/research/: TRUSTCHAIN_ANALYSIS.md
papers/simulation-reports/: ACADEMIC_REPORT.md  CONSOLIDATED_SIMULATION_REPORT.md  double_spend_simulation_plan.md
papers/technical-paper/: PARTICIPATION_VERIFICATION.md
papers/whitepaper/: WHITEPAPER.md
plans/: README.md
plans/mechanism-design/: participation-verification-math.md  participation-verification-social-attacks.md  participation-verification-vs-blockchain.md  participation-verification-vulnerabilities.md  participation-verification.md
protocol/: README.md
protocol/shared/: common.omt
scripts/: setup_hooks.py
simulations/: README.md
simulations/chain/: __init__.py  gossip.py  local_chain.py  network.py  omerta_chain.py  primitives.py  types.py
simulations/economic/: double_spend_simulation.py  economic_value_simulation.py  failure_modes.py  generate_visualizations.py  identity_rotation_attack.py  monetary_policy_iteration2.py  monetary_policy_simulation.py  reliability_market_equilibrium.py  reliability_market_simulation.py  reliability_market_v2.py  run_full_study.py  trust_simulation.py  verification_protocol.py
(+53 files in other folders)
